@@ -44,9 +44,12 @@
       for wildcards.
     * Added listdirinfo method, which yields both the entry names and the
       corresponding info dicts in a single operation.
-    * Fixed operation of OSFS on win32 when it points to the root of a drive.
     * Made SubFS a subclass of WrapFS, and moved it into its own module at
       fs.wrapfs.subfs.
+    * Path-handling fixes for OSFS on win32:
+        * Work properly when pointing to the root of a drive.
+        * Better handling of remote UNC paths.
+        * Add ability to switch off use of long UNC paths.
     * OSFSWatchMixin improvements:
         * watch_inotify:  allow more than one watcher on a single path.
         * watch_win32:  don't create immortal reference cycles.
@@ -65,7 +68,8 @@
     * Added a getmmap to base
     * Added command line scripts fsls, fstree, fscat, fscp, fsmv
     * Added command line scripts fsmkdir, fsmount
-    * Made SFTP automatically pick up keys if no other authentication is available
+    * Made SFTP automatically pick up keys if no other authentication
+      is available
     * Optimized listdir and listdirinfo in SFTPFS
     * Made memoryfs work with threads
     * Added copyfile_non_atomic and movefile_non_atomic for improved performance of multi-threaded copies
